--- a/Не удалять!!!!!!!!!!!!!/style.css
+++ b/Не удалять!!!!!!!!!!!!!/style.css
@@ -1,5 +1,5 @@
 /* ==================== ШРИФТ ==================== */
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); /* Пиксельный шрифт для Minecraft-стиля */
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body {
   margin: 0;
@@ -56,7 +56,7 @@ li:hover {
   box-shadow: 0 2px 0 #1D4ED8, 0 6px 12px rgba(0,0,0,0.4);
 }
 
-/* ==================== КНОПКИ В СТИЛЕ MINECRAFT ==================== */
+/* ==================== КНОПКИ  ==================== */
 button {
   background-color: #2563EB;
   color: #fff;
